--- a/src/index.css
+++ b/src/index.css
@@ -192,3 +192,7 @@ table {
   opacity: 1;
   transition: opacity ease-in .3s;
 }
+.spin-button-none::-webkit-outer-spin-button,
+.spin-button-none::-webkit-inner-spin-button{
+  appearance:none;
+}
