Moved the dashboard to a different domain

--- a/src/index.css
+++ b/src/index.css
@@ -221,6 +221,16 @@ input, a, select, textarea{
   @apply outline-blue;
 }
 
+/* style to remove the arrow from input[type = "number"] */
+input[type = "number"]::-webkit-inner-spin-button,
+input[type = "number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type = "number"] {
+  -moz-appearance: textfield;
+}
+
 .user-icon:hover .user-sub-nav {
   display:block;
 }
