--- a/src/index.css
+++ b/src/index.css
@@ -228,6 +228,7 @@ input[type = "number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 input[type = "number"] {
+  appearance: textfield;
   -moz-appearance: textfield;
 }
 
@@ -237,6 +238,14 @@ input[type = "number"] {
 
 #product-form > div:not(:last-child), #create-admin-form > div:not(:last-child) {
   margin-bottom:1.25rem;
+}
+
+#shop ul:hover{
+  display: flex;
+}
+
+#category-card:hover #category-card-desc{
+  right: 0;
 }
 
 /* customizing the product description scrollbar */
