Still working on the user profile

--- a/src/index.css
+++ b/src/index.css
@@ -248,6 +248,10 @@ input[type = "number"] {
   right: 0;
 }
 
+#edit_user_div:hover #edit_user_img{
+  display:flex;
+}
+
 /* customizing the product description scrollbar */
 /* #product-desc::-webkit-scrollbar{
   width:12px;
