Worked on the flow for user check out

--- a/src/index.css
+++ b/src/index.css
@@ -252,6 +252,10 @@ input[type = "number"] {
   display:flex;
 }
 
+#contact-information input{
+  @apply rounded-md
+}
+
 /* customizing the product description scrollbar */
 /* #product-desc::-webkit-scrollbar{
   width:12px;
