--- a/src/index.css
+++ b/src/index.css
@@ -232,9 +232,9 @@ input[type = "number"] {
   -moz-appearance: textfield;
 }
 
-.user-icon:hover .user-sub-nav {
+/* .user-icon:hover .user-sub-nav {
   display:block;
-}
+} */
 
 #product-form > div:not(:last-child), #create-admin-form > div:not(:last-child) {
   margin-bottom:1.25rem;
@@ -273,3 +273,22 @@ form input{
   height:4px;
   @apply rounded-full;
 } */
+
+/* classes for ionic components */
+.no-padding {
+  padding: 0 !important;
+}
+
+.button-no-padding {
+  --padding-start: 0 !important;
+  --padding-end: 0 !important;
+  --inner-padding-end: 0 !important;
+  --inner-padding-start: 0 !important;
+  --inner-padding-top: 0 !important;
+  --inner-padding-bottom: 0 !important;
+}
+
+.item-no-padding {
+  --padding-start: 0 !important;
+  --padding-end: 0 !important;
+}
